--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,56 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" href="%PUBLIC_URL%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta
 			name="description"
 			content="Explore Toronto Metropolitan University!"
 		/>
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-		<!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+		<link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+		<!-- Primary Meta Tags -->
+		<title>Tmu Explore</title>
+		<meta
+			property="og:image"
+			content="https://tmu-explorer.vercel.app/TmuExplore.jpg"
+		/>
+		<meta
+			name="description"
+			content="Explore Toronto Metropolitan University's downtown campus in 3D"
+		/>
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://tmu-explorer.vercel.app/" />
+		<meta property="og:title" content="Tmu Explore" />
+		<meta
+			property="og:description"
+			content="Explore Toronto Metropolitan University's downtown campus in 3D"
+		/>
+		<meta
+			property="og:image"
+			content="https://tmu-explorer.vercel.app/TmuExplore.jpg"
+		/>
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://tmu-explorer.vercel.app/" />
+		<meta property="twitter:title" content="Tmu Explore" />
+		<meta
+			property="twitter:description"
+			content="Explore Toronto Metropolitan University's downtown campus in 3D"
+		/>
+		<meta
+			property="twitter:image"
+			content="https://tmu-explorer.vercel.app/TmuExplore.jpg"
+		/>
+
 		<title>TMU Explore</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
-		<!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
 	</body>
 </html>
